# dbt-run-analyser

./: .gitignore  README.md  pyproject.toml  tox.ini
.dbt/: profiles.yml
dbt_run_analyser/: dag.py  node.py  plot.py
dbt_run_analyser/cli/: main.py
dbt_run_analyser/utils/: log_parser.py  manifest_parser.py
dbt_thread_optimiser/: dag.py  node.py
examples/: plot.ipynb
quantum/: dbt_project.yml  exposures.yml
quantum/models/order/events/: e_instore_order.py  e_online_order.py  e_order_event_1.py  e_order_event_1.yml  e_order_event_2.py  e_order_event_3.py  e_order_event_4.py  e_order_event_5.py  e_order_event_6.py  e_order_event_7.py  e_order_item.py
quantum/models/order/mart/: dim_customer.py  dim_store.py  fct_order.py  fct_order.yml  order_wide.py
quantum/models/order/stage/: stg_order.py  stg_order.sql  stg_order_item.sql  stg_order_some.py
src/: dag.py
src/utils/: log_parser.py
tests/: test_dag.py  test_plot.py
tests/utils/: test_log_parser.py  test_manifest_parser.py
