[project]
name = "dbt_run_analyser"
version = "0.1.0"
description = "Python library to analyse thread utilisation for dbt runs."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Mathias Nørskov", email = "mathiasnoerskov@gmail.com" } 
]
requires-python = ">=3.8,<4"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
]
keywords = ["dbt_run_analyser"]
dependencies = [
    "pandas>=2.2",
] 

[project.urls]
Homepage = "https://github.com/mathiasDK/dbt_run_analyser"

[project.optional-dependencies]
test = [
    "black==24.*",
    "pytest==8.*",
    "tox==4.4.7",
    "flake8==4.0.1",
    "coverage==7.2.2",
    "coverage-badge==1.*",
    "pytest-cov==4.0.0",
    "twine==4.0.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = [
    "tests"
]

[tool.setuptools.packages.find]
include = ["dbt_run_analyser"]
exclude = ["docs*", "logs*", "quantum*", "test_data*"]

[tool.black]
line-length = 88
target-version = ['py311']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
